--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         let br = 1
         let sp = 20
         await Array(cl*rw*br).fill().map(async (v, i) => {
-          let geo = await Coordinates.LoadGeometry(renderer, 'cube', 10, 3, 1, true, true, true)
+          let geo = await Coordinates.LoadGeometry(renderer, 'dodecahedron', 10, 1, 1, true, true, true)
           geo.x = ((i%cl)-cl/2 + .5) * sp
           geo.y = (((i/cl|0)%rw) - rw/2 + .5) * sp
           geo.z = ((i/cl/rw|0)-br/2 + .5) * sp
@@ -101,7 +101,7 @@
           var X, Y, Z, e
           renderer.Clear()
           
-          //renderer.z = Math.min(20, Math.max(10, (.3 + C(t/4))*100))
+          renderer.z = Math.min(16, Math.max(0, (.3 + C(t/4))*100))
           
           geos.map(geometry => {
             if(1) for(let i = 0; i<geometry.vertices.length; i+=3){
@@ -112,7 +112,7 @@
               e = Coordinates.R(X,Y,Z, {x:0, y:0, z:0,
                                         roll:  0,
                                         pitch: -.002,
-                                        yaw:   .001}, false)
+                                        yaw:   .005}, false)
               geometry.vertices[i+0] = e[0]
               geometry.vertices[i+1] = e[1]
               geometry.vertices[i+2] = e[2]
@@ -125,7 +125,7 @@
               e = Coordinates.R(X,Y,Z, {x:0, y:0, z:0,
                                         roll:  0,
                                         pitch: -.002,
-                                        yaw:   .001}, false)
+                                        yaw:   .005}, false)
               geometry.normals[i+0] = e[0]
               geometry.normals[i+1] = e[1]
               geometry.normals[i+2] = e[2]
