--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
         let rw = 1
         let br = 1
         let sp = 20
+        let showNormals
         await Array(cl*rw*br).fill().map(async (v, i) => {
-          let geo = await Coordinates.LoadGeometry(renderer, 'dodecahedron', 10, 1, 1, true, true, true)
+          let geo = await Coordinates.LoadGeometry(renderer, 'dodecahedron', 14, 2, 1, false, false, showNormals=false)
           geo.x = ((i%cl)-cl/2 + .5) * sp
           geo.y = (((i/cl|0)%rw) - rw/2 + .5) * sp
           geo.z = ((i/cl/rw|0)-br/2 + .5) * sp
@@ -101,7 +102,7 @@
           var X, Y, Z, e
           renderer.Clear()
           
-          renderer.z = Math.min(16, Math.max(0, (.3 + C(t/4))*100))
+          //renderer.z = Math.min(16, Math.max(0, (.3 + C(t/4))*100))
           
           geos.map(geometry => {
             if(1) for(let i = 0; i<geometry.vertices.length; i+=3){
@@ -111,8 +112,8 @@
 
               e = Coordinates.R(X,Y,Z, {x:0, y:0, z:0,
                                         roll:  0,
-                                        pitch: -.002,
-                                        yaw:   .005}, false)
+                                        pitch: 0,
+                                        yaw:   0}, false)
               geometry.vertices[i+0] = e[0]
               geometry.vertices[i+1] = e[1]
               geometry.vertices[i+2] = e[2]
@@ -124,8 +125,8 @@
               Z = geometry.normals[i+2]
               e = Coordinates.R(X,Y,Z, {x:0, y:0, z:0,
                                         roll:  0,
-                                        pitch: -.002,
-                                        yaw:   .005}, false)
+                                        pitch: 0,
+                                        yaw:   0}, false)
               geometry.normals[i+0] = e[0]
               geometry.normals[i+1] = e[1]
               geometry.normals[i+2] = e[2]
