--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             uniform: {
               type: 'reflection',
               map: 'https://srmcgann.github.io/skyboxes3/HDRI/alices.jpg',
-              value: 1,
+              value: .25,
             },
           },
           {
