--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         Coordinates.AnimationLoop(renderer, 'Draw')
         
         if(1) var shaderOptions = [
+          { alpha: true },
           {
             uniform: {
               enabled: true,
