--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <body>
     <div id="output"></div>
     <script type="module">
-    import * as Coordinates from "https://srmcgann.github.io/Coordinates/coordinates.js"
+    import * as Coordinates from "./coordinates.js"
 
       var S = Math.sin, C = Math.cos
       
