--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="module">
 
       import * as Coordinates from
-      "./coordinates.js"
+      "./coordinates.js?1"
 
       var renderer = await Coordinates.Renderer({ambientLight: -.2, fov: 1600})
       renderer.z = 20
@@ -114,6 +114,7 @@
           averageNormals: true,
           x, y, z,
           size: 6,
+          showNormals: false,
           map: 'https://srmcgann.github.io/Coordinates/resources/nebugrid_po2.jpg'
         }
         await Coordinates.LoadGeometry(renderer, geoOptions).then(async (geometry) => {
@@ -159,7 +160,8 @@
           y: 10,
           z,
           size: 36,
-          pointLightShowSource: true
+          pointLightShowSource: true,
+          showNormals: false,
         }
         await Coordinates.LoadGeometry(renderer, geoOptions).then(async (geometry) => { shapes.push(geometry) })
       }
@@ -176,6 +178,7 @@
         y:0,
         z:0,
         size: 16,
+        showNormals: false,
         map: 'https://srmcgann.github.io/Coordinates/resources/stars/star1.png'
       }
       await Coordinates.LoadGeometry(renderer, geoOptions).then(async (geometry) => {
@@ -185,6 +188,7 @@
       
 
       window.Draw = () => {
+        renderer.Clear()
         renderer.z = Math.min(200, Math.max(20, (.3+C(renderer.t/8))*1E3))
         renderer.pitch = Math.min(1, Math.max(0, (.3+C(renderer.t/2)) * 1.5))
         renderer.yaw +=  .005
