--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   var rendererOptions = {
     ambientLight: 0,
-    fov: 1500,
+    fov: 1200,
     margin: 0
   }
   var renderer = await Coordinates.Renderer(rendererOptions)
@@ -31,18 +31,19 @@
   //var refTexture = 'https://srmcgann.github.io/skyboxes2/videos/pulse_darker.mp4'
   //var refTexture = 'https://srmcgann.github.io/skyboxes/HDRI/26.jpg'
   //var refTexture = 'https://srmcgann.github.io/Coordinates/resources/nebugrid_po2.jpg'
-  var refTexture = 'https://srmcgann.github.io/skyboxes3/HDRI/spacemaze1.jpg'
+  //var refTexture = 'https://srmcgann.github.io/Coordinates/resources/spacemaze_po2.jpg'
+  var refTexture = 'https://srmcgann.github.io/skyboxes3/videos/individuality.mp4'
   var shaderOptions = [
     {lighting:
-      { type: 'ambientLight', value: .3}
+      { type: 'ambientLight', value: .25}
     },
     { uniform: {
       type: 'phong',
-      value: .4
+      value: .6
     } },
     { uniform: {
       type: 'reflection',
-      value: .3,
+      value: .5,
       map: refTexture,
       //playbackSpeed: .5
       //muted: false,
@@ -65,55 +66,59 @@
   var cl = 3
   var rw = 1
   var br = 3
-  var sp = 50
+  var sp = 100
   for(var i = 0; i < cl*rw*br; i++){
-    console.log(i)
     var x = ((i%cl)-cl/2 + .5) * sp
     var y = (((i/cl|0)%rw)-rw/2 + .5) * sp
     var z = ((i/cl/rw|0)-br/2 + .5) * sp
-    var geoOptions = x || y || z ? {
-      shapeType: 'cube',
-      size: 14,
-  //    scaleY: 2,
-      subs: 2,
-      sphereize: 1,
-      x, y, z,
-      averageNormals: true,
-      map: 'https://srmcgann.github.io/Coordinates/resources/nebugrid_po2.jpg',
-      color: 0x888888,
-      colorMix: 0,
-    } : {
-      shapeType: 'obj',
-      url: 'https://srmcgann.github.io/objs/lozenge1.obj',
-      //objY: 6,
-      size: 16,
-      x, z,
-      y,
-  //    scaleY: 2,
-      //subs: 2,
-      //sphereize: 1,
-      averageNormals: true,
-      map: 'https://srmcgann.github.io/Coordinates/resources/nebugrid_po2.jpg',
-      color: 0x888888,
-      colorMix: 0,
-      exportShape: true,
+    if(!x || !z){
+      var geoOptions = x || y || z ? {
+        shapeType: 'dodecahedron',
+        size: 64,
+    //    scaleY: 2,
+        subs: 2,
+        sphereize: -.5,
+        x, y, z,
+        averageNormals: true,
+        map: 'https://srmcgann.github.io/Coordinates/resources/nebugrid_po2.jpg',
+        color: 0x888888,
+        colorMix: 0,
+      } : {
+        shapeType: 'custom shape',
+        url: 'https://srmcgann.github.io/Coordinates/custom shapes/lozenge1.json',
+        //url: 'https://srmcgann.github.io/objs/lozenge1.obj',
+        //objY: 6,
+        size: 2,
+        x, z,
+        y,
+    //    scaleY: 2,
+        //subs: 2,
+        //sphereize: 1,
+        //averageNormals: true,
+        map: 'https://srmcgann.github.io/Coordinates/custom shapes/ladybug texture.jpg',
+        color: 0x888888,
+        colorMix: 0,
+        equirectangular: true,
+        //exportShape: true,
+      }
+      Coordinates.LoadGeometry(renderer, geoOptions).then(async (geometry) => {
+        shapes.push(geometry)
+        await shader.ConnectGeometry(geometry)
+      })
     }
-    await Coordinates.LoadGeometry(renderer, geoOptions).then(async (geometry) => {
-      shapes.push(geometry)
-      await shader.ConnectGeometry(geometry)
-    })
   }
   
   
   var geoOptions = {
-    shapeType: 'dodecahedron',
+    shapeType: 'octahedron',
     name: 'background',
     size: 1e3,
     subs: 3,
     //averageNormals: true,
-    //sphereize: 1,
+    sphereize: 1,
     //equirectangular: true,
     map: refTexture,
+    muted: false,
     color: 0xffffff,
     colorMix: 0,
   }
@@ -185,29 +190,28 @@
   
   window.Draw = async () => {
   
-    shapes.map(shape=>{
+    var t = renderer.t
+    shapes.map((shape, idx) => {
       switch(shape.name){
         case 'background':
         break
         default:
-          shape.pitch -= .01
-          shape.yaw   += .02
+          shape.pitch -= C(t/4 + Math.PI*2/3*idx) * .05
+          //shape.yaw   += .005
         break
       }
       renderer.Draw(shape)
     })
   
-    var t = renderer.t
     
-    renderer.z = Math.min(200, Math.max(16, (.3+C(t/2))*250))
+    renderer.z = Math.min(150, Math.max(40, (.3+C(t/4))*250))
     
-    renderer.yaw += .005
-    renderer.pitch = Math.min(-.2, Math.max(.5, (.3+C(t))*1))
+    renderer.yaw += .001
+    renderer.pitch = Math.min(.5, Math.max(-.75, (.3+C(t/2))*2))
 
     //if(!((t*60|0)%iPfreq)) await spawnP(S(t*8) * 20,0,0)
     P = P.filter(v=>v.age>.05)
     P.map(v => {
-      console.log(v)
       v.age -= .01
       v.shape.x += v.vx
       v.shape.y += v.vy
